--- a/PersonalWebsite/index.html
+++ b/PersonalWebsite/index.html
@@ -34,13 +34,13 @@
       </button>
     </nav>
 
-    <!-- Hero Section -->
-    <section class="hero" id="about">
+    <!-- Profile Section -->
+    <section class="profile" id="about">
       <img
-        src="assets/images/Shawn.jpg"
-        alt="jane-doe"
+        src="assets/images/shawn.png"
+        alt="pfp"
         loading="lazy"
-        class="hero-img"
+        class="profile-img"
       />
       <div class="bio animateshake">
         <h2 class="bio-title">About Me</h2>
@@ -131,7 +131,7 @@
         <div class="project-container project-card">
           <img
             src="assets/images/ResearchWebScreen.png"
-            alt="expense-tracker"
+            alt="Research PNG"
             loading="lazy"
             class="project-pic"
           />
@@ -150,7 +150,7 @@
         <div class="project-container project-card">
           <img
             src="assets/images/SymptomSmashWebScreen.png"
-            alt="netflic-clone"
+            alt="Smash Symptoms"
             loading="lazy"
             class="project-pic"
           />
@@ -165,7 +165,7 @@
         <div class="project-container project-card">
           <img
             src="assets/images/carcassonnewebscreenshot.jpg"
-            alt="greeny-earth"
+            alt="carcassonne"
             loading="lazy"
             class="project-pic"
           />
@@ -243,7 +243,7 @@
       </div>
     </section>
 
-    <!-- Social accounts - Fixed to the right -->
+    <!-- Social accounts -->
     <div class="socials">
         <a href="http://www.linkedin.com/in/1cken" target="_blank"
           ><img
@@ -307,5 +307,28 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.1.0/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.1.0/firebase-analytics.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+    
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyDu4JSJmcvu8F-sp57sOzxVf4Cl-9Meokg",
+        authDomain: "personal-portfolio-websi-2d353.firebaseapp.com",
+        projectId: "personal-portfolio-websi-2d353",
+        storageBucket: "personal-portfolio-websi-2d353.appspot.com",
+        messagingSenderId: "334720844694",
+        appId: "1:334720844694:web:42fb2149f1d0f81064d3b7",
+        measurementId: "G-WTDSDKR7ZD"
+      };
+    
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+    </script>
   </body>
 </html>
