--- a/PersonalWebsite/index.html
+++ b/PersonalWebsite/index.html
@@ -128,6 +128,24 @@
     <section class="projects" id="projects">
       <h2 class="projects-title">Recent Projects</h2>
       <div class="projects-container">
+
+        <div class="project-container project-card">
+          <img
+            src="assets/images/songprediction.png"
+            alt="Research PNG"
+            loading="lazy"
+            class="project-pic"
+          />
+          <h3 class="project-title">Song Predictor</h3>
+          <p class="project-details">
+            - Songs are predicted from 1 to 100 with 1 being the most popular and 100 being the least
+            <br> - Implemented a K-Nearest Neigbor with Gridsearch CV machine learning model that achieved a mean error rate of around 16 
+            <br> - Engineered model to take in song data from Spotify API in order to predict the popoularity of the song
+            <br> - Created a Linear Regression model to compare the accuracy of the machine learning model 
+          </p>
+          <a href="https://github.com/xxilytoo/Song-Prediction" target="_blank" class="project-link">Check out this song popularity prediction model</a>
+        </div>
+      <div class="projects-container">
         <div class="project-container project-card">
           <img
             src="assets/images/ResearchWebScreen.png"
